Bug 421169 - "Flashing cursor appears next to programmatically focused buttons" [p=chris@pearce.org.nz (Chris Pearce [cpearce]) r=peterv sr=roc a1.9=beltzner]